--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Deemed University  - Mech</p>
+            <p>Bsc computer science</p>
             
             
         </div>
@@ -148,10 +148,7 @@
         <div class="section-content">
             <h2>Projects</h2>
             <ul>
-                <li><a href="#">E Cart website</a></li>
-                <li><a href="#">Cloud Security IBM</a></li>
-                <li><a href="#">IBM chatbot</a></li>
-                <li><a href="#">College Portal</a></li> 
+                <li>personal protfolio</a></li> 
                 <!-- Add more project links here -->
             </ul>
         </div>
